Fixed images problem and comments format
